[package]
name = "signal-desktop-image-extractor"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
color-eyre = "0.6.3"
dirs = "6.0.0"
fs-err = "3.1.0"
rusqlite = { version = "0.33.0", features = ["uuid", "bundled-sqlcipher"] }
serde_json = "1.0.138"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
infer = "0.16.0"
